# papin

./: .gitignore  CLAUDE.md  Cargo.toml  MCP_ARCHITECTURE.md  MCP_README.md  Makefile  PROJECT_STATUS.md  Papin-Gold-Delivery-Plan.md  Papin-Project-Status-Update.md  README.md  frontend-only.ps1  implementation-summary.md  package-lock.json  package.json  repomix-output.xml  start-app.ps1
.github/workflows/: ci.yml  release.yml
benches/: performance_bench.rs
docs/: ARCHITECTURE.md  COMPONENTS.md  INSTALLATION.md  INTEGRATIONS.md  OBSERVABILITY.md  README.md  RELEASE_PROCESS.md  SECURITY_PRIVACY.md  TELEMETRY_ANALYSIS.md  TESTING_AND_DEPLOYMENT.md  USER_GUIDE.md  config_platform.md  llm_provider_system.md  local_llm_integration.md  model_management.md  model_management_test.md  offline_manager_integration.md  plugin_system_design.md
docs/archive/: frontend-implementation-summary.md  implementation-summary.md  phase4-complete-implementation-report.md  phase4-implementation-summary.md
docs/local_llm_integration/: developer_documentation.md  provider_comparison.md  troubleshooting_guide.md  user_guide.md
examples/: config_platform_example.rs  model_management_test.js
installers/: linux-build.sh  macos-build.sh  windows-build.ps1
plugins/: README.md
plugins/examples/github-snippets/: Cargo.toml  manifest.json
plugins/examples/github-snippets/src/: main.rs
plugins/examples/meeting-summarizer/: Cargo.toml  manifest.json
plugins/examples/meeting-summarizer/src/: main.rs
plugins/examples/translation-plugin/: Cargo.toml  manifest.json
plugins/examples/translation-plugin/src/: main.rs
scripts/: build-linux.sh  build-macos.sh  build-windows.ps1
src/: feature_flags.rs  main.rs  shell_loader.rs  updater.rs
src-cli/: Cargo.toml  README.md
src-cli/src/: error.rs  main.rs
src-cli/src/commands/: chat.rs  delete.rs  export.rs  interactive.rs  list.rs  mod.rs  model.rs  new.rs  setup.rs  show.rs  system.rs
src-cli/src/display/: formatter.rs  mod.rs  printer.rs  spinner.rs  table.rs
src-common/: Cargo.toml  README.md
src-common/src/: error.rs  lib.rs
src-common/src/config/: mod.rs  platform.rs  settings.rs  storage.rs
src-common/src/feature_flags/: mod.rs
src-common/src/models/: conversation.rs  message.rs  mod.rs  model.rs  tool.rs
src-common/src/monitoring/: mod.rs  platform.rs
src-common/src/network/: mod.rs  platform.rs
src-common/src/observability/: canary.rs  logging.rs  metrics.rs  mod.rs  telemetry.rs
src-common/src/performance/: mod.rs  platform.rs
src-common/src/platform/: fs.rs
src-common/src/protocol/: mcp.rs  mod.rs  websocket.rs
src-common/src/service/: chat.rs  mcp.rs  mod.rs
src-common/src/utils/: locks.rs  mod.rs  safe_lock.rs  security.rs  text.rs
src-frontend/: implementation-summary.md  index.html  jest.config.cjs  jest.config.js  package-lock.json  package.json  ui-enhancements-summary.md  vite.config.ts
src-frontend/src/: App.css  App.example.tsx  App.tsx  Routes.tsx  index.css  main.tsx
src-frontend/src/accessibility/: A11yButton.tsx  AccessibilityProvider.tsx  accessibility.css  index.ts
src-frontend/src/animation/: AnimationProvider.tsx  animations.css
src-frontend/src/api/: ChatApi.ts  EnhancedModelManager.ts  ModelManager.ts  SettingsApi.ts  modelRegistry.ts
src-frontend/src/components/: AppShell.css  AppShell.tsx  CommandPalette.css  CommandPalette.tsx  ErrorBoundary.tsx  PlatformIndicator.tsx  Shell.css  Shell.tsx  ThemeProvider.tsx  icons.tsx
src-frontend/src/contexts/: FeatureFlagContext.tsx  SettingsContext.tsx
src-frontend/src/disclosure/: FeatureBadge.tsx  FeatureDiscovery.tsx  LockedFeatureMessage.tsx  ProgressiveDisclosure.tsx  disclosure.css  index.ts
src-frontend/src/features/: performance.tsx
src-frontend/src/help/: HelpButton.tsx  HelpProvider.tsx  HelpTrigger.tsx  help.css  index.ts
src-frontend/src/hooks/: useCollaboration.ts  useCommandPalette.ts  usePlatform.ts
src-frontend/src/interactions/: feedback.css  index.ts  useFeedback.ts  useHoverEffect.ts  useMicroInteraction.ts  usePressEffect.ts  useRippleEffect.tsx
src-frontend/src/keyboard/: KeyboardNavigation.css  KeyboardNavigation.tsx
src-frontend/src/lazy/: Chat.css  Chat.tsx  Header.css  Header.tsx  Settings.css  Settings.tsx  Sidebar.css  Sidebar.tsx
src-frontend/src/platform/: integration.ts
src-frontend/src/styles/: collaboration.css  global.css  observability.css  theme.ts  whiteboard.css
src-frontend/src/theme/: ThemeContext.tsx  ThemeToggle.css  ThemeToggle.tsx  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  main.rs.bak
src-tauri/src/commands/: mod.rs  offline.rs  performance.rs
src-tauri/src/monitoring/: resources.rs
src-tauri/src/notification/: mod.rs
src-tauri/src/offline/: mod.rs
src-tauri/src/offline/llm/: factory.rs  mod.rs  ollama.rs  provider.rs  types.rs
src-tauri/src/offline/llm/providers/: localai.rs  mod.rs  ollama.rs
src-tauri/src/system/: mod.rs  platform.rs
src-tui/: Cargo.toml  README.md
src-tui/src/: error.rs  event.rs  main.rs
src-tui/src/app/: mod.rs
src-tui/src/ui/: mod.rs
src-tui/src/util/: mod.rs
src/ai/: mod.rs
src/auto_update/: mod.rs
src/collaboration/: mod.rs  presence.rs  rtc.rs  sessions.rs  sync.rs
src/commands/: ai.rs  auth.rs  chat.rs  error.rs  llm_metrics.rs  mcp.rs  mod.rs  offline.rs  optimization.rs  performance.rs  security.rs  update.rs
src/models/: messages.rs  mod.rs
src/observability/: mod.rs
src/offline/: mod.rs
src/optimization/: mod.rs
src/plugins/: mod.rs  types.rs
src/protocols/: mod.rs
src/security/: credentials.rs  data_flow.rs  e2ee.rs  mod.rs  permissions.rs
src/services/: ai.rs  api.rs  auth.rs  chat.rs  mcp.rs  mod.rs
src/telemetry/: mod.rs
src/utils/: config.rs  events.rs  lazy_loader.rs  mod.rs
tests/: platform_fs_test.rs
tests/e2e/: end_to_end_test.js  playwright.config.js
tests/integration/: api_integration_test.rs  auto_update_test.rs  performance_test.rs  ui_integration_test.rs  updater_test.rs
tests/unit/: auto_update_test.rs  offline_test.rs  optimization_test.rs
(+134 files in other folders)
