[package]
name = "mcp-client"
version = "1.0.0"
description = "MCP Client Application"
authors = ["MCP Team"]
license = "MIT"
edition = "2021"
rust-version = "1.65"

[dependencies]
# Tauri and system dependencies
tauri = { version = "1.5", features = ["dialog-all", "fs-all", "http-all", "shell-open", "updater", "protocol-asset"] }
tauri-build = { version = "1.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
axum = { version = "0.7", features = ["multipart"] }

# Logging and observability
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
chrono = { version = "0.4", features = ["serde"] }

# Network and API
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
url = "2.5"
http = "0.2"
hyper = { version = "1.1", features = ["full"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
parking_lot = "0.12"
once_cell = "1.19"
lazy_static = "1.4"
regex = "1.10"
rand = "0.8"
zstd = "0.13"
flate2 = "1.0"
lru = "0.12"
tempfile = "3.8"
dirs = "5.0"

# Memory optimization (optional)
mimalloc = { version = "0.1", optional = true }

# Performance benchmarking
criterion = { version = "0.5", optional = true }

# System information
sys-info = "0.9"

[dev-dependencies]
mockall = "0.12"
tempfile = "3.8"
criterion = "0.5"
insta = "1.34"
test-log = "0.2"
proptest = "1.4"

[features]
default = []
memory-optimizations = ["mimalloc"]
benchmarking = ["criterion"]
telemetry = []
canary = []
# Custom protocol for deep linking support
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
opt-level = "s"

[profile.dev.package."*"]
opt-level = 2

[profile.release.package."*"]
opt-level = 3

[[bench]]
name = "performance_bench"
harness = false
required-features = ["benchmarking"]

[package.metadata.bundle]
name = "MCP Client"
identifier = "com.mcp-client.app"
icon = ["icons/32x32.png", "icons/128x128.png", "icons/128x128@2x.png", "icons/icon.icns", "icons/icon.ico"]
copyright = "© 2025 MCP Team"
category = "DeveloperTool"
short_description = "MCP Client Application"
long_description = """
MCP Client is a cross-platform desktop application for accessing and interacting with the MCP system.
It provides a rich set of features, robust offline capabilities, and excellent performance.
"""
deb_depends = ["libssl3", "libwebkit2gtk-4.0-37"]
osx_minimum_system_version = "10.15"
osx_frameworks = ["WebKit", "AppKit", "Foundation"]
