[package]
name = "mcp-cli"
version = "0.1.0"
edition = "2021"
description = "Command Line Interface for the MCP client"

[dependencies]
# Common library
mcp-common = { path = "../src-common" }

# CLI framework
clap = { version = "4.4.4", features = ["derive"] }
dialoguer = "0.10.4"
indicatif = "0.17.7"
console = "0.15.7"

# Async runtime
tokio = { version = "1.32", features = ["full"] }
futures = "0.3.28"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and error handling
log = "0.4.20"
env_logger = "0.10.0"
thiserror = "1.0.49"
anyhow = "1.0.75"

# Utilities
chrono = { version = "0.4.29", features = ["serde"] }
once_cell = "1.18.0"
dirs = "5.0.1"
atty = "0.2.14"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
