[package]
name = "mcp-common"
version = "0.1.0"
edition = "2021"
description = "Shared components for MCP client applications"

[dependencies]
# Async runtime and utilities
tokio = { version = "1.32", features = ["full"] }
async-trait = "0.1.73"
futures = "0.3.28"

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebSocket and HTTP client
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
reqwest = { version = "0.11", features = ["json", "native-tls"] }
url = "2.4.1"

# Utilities
log = "0.4.20"
env_logger = "0.10.0"
thiserror = "1.0.49"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
once_cell = "1.18.0"
chrono = { version = "0.4.29", features = ["serde"] }
strum = { version = "0.25", features = ["derive"] }
regex = "1.9.5"

# Config and settings
config = "0.13.3"
directories = "5.0.1"

# Encryption
ring = "0.17.5"
base64 = "0.21.4"

# For cross-platform file operations
dirs = "5.0.1"
lazy_static = "1.4.0"

# For Windows-specific operations
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["wininet"] }
