[package]
name = "claude-mcp-client"
version = "0.1.0"
description = "Claude MCP Client for Linux"
authors = ["Your Name"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.62"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = ["dialog-ask", "dialog-confirm", "dialog-message", "dialog-open", "dialog-save", "clipboard-read-text", "clipboard-write-text", "fs-exists", "fs-read-dir", "fs-read-file", "fs-write-file", "http-request", "notification-all", "window-center", "window-close", "window-hide", "window-maximize", "window-minimize", "window-request-user-attention", "window-set-always-on-top", "window-set-decorations", "window-set-focus", "window-set-fullscreen", "window-set-icon", "window-set-min-size", "window-set-position", "window-set-resizable", "window-set-size", "window-set-title", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize", "shell-open"] }
tokio = { version = "1.28.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.18.0"
log = "0.4.19"
env_logger = "0.10.0"
rand = "0.8.5"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
futures = "0.3.28"
lazy_static = "1.4.0"
bitflags = "2.3.3"
directories = "5.0.1"
thiserror = "1.0.40"
async-trait = "0.1.68"
url = "2.3.1"
futures-util = "0.3.28"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
# Enables experimental features
experimental = []
# Enables development-only features
dev = []