[package]
name = "mcp-tui"
version = "0.1.0"
edition = "2021"
description = "Text User Interface for the MCP client"

[dependencies]
# Common library
mcp-common = { path = "../src-common" }

# TUI framework
crossterm = "0.27.0"
ratatui = "0.24.0"
tui-textarea = "0.3.0"

# Async runtime
tokio = { version = "1.32", features = ["full"] }
futures = "0.3.28"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and error handling
log = "0.4.20"
env_logger = "0.10.0"
thiserror = "1.0.49"
anyhow = "1.0.75"

# Utilities
chrono = { version = "0.4.29", features = ["serde"] }
once_cell = "1.18.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
dirs = "5.0.1"
