[package]
name = "meeting-summarizer"
version = "0.1.0"
edition = "2021"
description = "Generate structured summaries from meeting transcripts"
authors = ["Claude MCP Team"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
