[package]
name = "translation-plugin"
version = "0.1.0"
edition = "2021"
description = "Translate messages between different languages"
authors = ["Claude MCP Team"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
